// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`file2Schema simple 1`] = `
Object {
  "fname": "sample",
  "imports": undefined,
  "root": Object {
    "children": Array [
      "quickstart",
      "concepts",
      "tips",
      "faq",
      "upgrading",
      "topic",
      "install",
    ],
    "desc": "projects",
    "id": "pro",
    "namespace": true,
    "parent": "root",
  },
  "schemas": Object {
    "concepts": Object {
      "body": "",
      "children": Array [],
      "created": 1601932630350,
      "data": Object {},
      "desc": "basic concepts to do with the project",
      "fname": null,
      "id": "concepts",
      "parent": "pro",
      "title": "concepts",
      "type": "schema",
      "updated": 1601932630350,
    },
    "faq": Object {
      "body": "",
      "children": Array [],
      "created": 1601932630350,
      "data": Object {},
      "desc": "",
      "fname": null,
      "id": "faq",
      "parent": "pro",
      "title": "faq",
      "type": "schema",
      "updated": 1601932630350,
    },
    "install": Object {
      "body": "",
      "children": Array [],
      "created": 1601932630351,
      "data": Object {},
      "desc": "",
      "fname": null,
      "id": "install",
      "parent": "pro",
      "title": "install",
      "type": "schema",
      "updated": 1601932630351,
    },
    "pro": Object {
      "body": "",
      "children": Array [
        "quickstart",
        "concepts",
        "tips",
        "faq",
        "upgrading",
        "topic",
        "install",
      ],
      "created": 1601932630350,
      "data": Object {
        "namespace": true,
      },
      "desc": "projects",
      "fname": null,
      "id": "pro",
      "parent": "root",
      "title": "pro",
      "type": "schema",
      "updated": 1601932630350,
    },
    "quickstart": Object {
      "body": "",
      "children": Array [],
      "created": 1601932630350,
      "data": Object {},
      "desc": "getting started with a project",
      "fname": null,
      "id": "quickstart",
      "parent": "pro",
      "title": "quickstart",
      "type": "schema",
      "updated": 1601932630350,
    },
    "tips": Object {
      "body": "",
      "children": Array [],
      "created": 1601932630350,
      "data": Object {},
      "desc": "",
      "fname": null,
      "id": "tips",
      "parent": "pro",
      "title": "tips",
      "type": "schema",
      "updated": 1601932630350,
    },
    "topic": Object {
      "body": "",
      "children": Array [],
      "created": 1601932630351,
      "data": Object {
        "namespace": true,
      },
      "desc": "important areas of a project",
      "fname": null,
      "id": "topic",
      "parent": "pro",
      "title": "topic",
      "type": "schema",
      "updated": 1601932630351,
    },
    "upgrading": Object {
      "body": "",
      "children": Array [],
      "created": 1601932630351,
      "data": Object {},
      "desc": "",
      "fname": null,
      "id": "upgrading",
      "parent": "pro",
      "title": "upgrading",
      "type": "schema",
      "updated": 1601932630351,
    },
  },
  "version": 1,
}
`;

exports[`schemaModuleProps2File non-root 1`] = `
"version: 1
imports: []
schemas:
  - id: bond
    children:
      - ch1
    title: bond
    parent: root
  - id: ch1
    children: []
    title: ch1
"
`;

exports[`schemaModuleProps2File root 1`] = `
"version: 1
imports: []
schemas:
  - id: root
    children: []
    title: root
    parent: root
"
`;
